# PRT-IO-Library

./: CMakeLists.txt  LICENSE  README  build.bat  build.sh  example.cpp  example_layout.cpp  example_metadata.cpp
cmake/: CMakeLists.txt
cmake/Modules/: README.txt
prtio/: prt_ifstream.hpp  prt_istream.hpp  prt_layout.hpp  prt_meta_value.hpp  prt_metadata.hpp  prt_ofstream.hpp  prt_ostream.hpp  prt_transforms.hpp
prtio/detail/: any.hpp  any_impl.hpp  any_io.hpp  conversion.hpp  data_types.hpp  prt_header.hpp
